test/negative/211_for_body_nonvoid.fx
// expect: void
val a = [1, 2, 3]
for x <- a { x + 1 }
